每週進度更新

--- a/content/w13.html
+++ b/content/w13.html
@@ -155,7 +155,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p><img alt="" height="237" src="./../images/cdaw13.png" width="500"/></p>
+<p><span>▲抽中的通知信</span></p>
+<p><span>這週是第二週 已經較為熟悉操作方式</span></p>
+<p><span>一樣是需要將自己的進度放置於網頁並盡量不造成衝突</span></p>
+<p><span><img alt="" height="223" src="./../images/cdaw13-1.png" width="500"/></span></p>
+<p><span>▲小組倉儲</span></p>
+<p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw13-1">https://github.com/mdecourse/cdaw13-1</a></p>
+<p>小分組網頁:<a href="http://mde.tw/cdaw13-1/content/index.html">http://mde.tw/cdaw13-1/content/index.html</a></p><br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
