--- a/content/w15.html
+++ b/content/w15.html
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>w15</h1>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
+<p><img alt="" height="245" src="./../images/cdaw15.png" width="500"/></p><br />w14 << <a href='w14.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
       <div class="container">
