--- a/content/亂數分組.html
+++ b/content/亂數分組.html
@@ -155,7 +155,18 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">更新python << <a href='更新python.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>亂數分組</h1>
-<br />更新python << <a href='更新python.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
+<p>亂數分組的流程大致可以分為4個步驟</p>
+<p><span style="background-color: #ffcc99;">1 抓出學員資料</span></p>
+<p>利用Python的requests模組來抓取網頁上的學生名單</p>
+<p><span style="background-color: #ffcc99;">2 將學生名單轉為文字檔</span></p>
+<p>將抓取到的學生名單進行轉換(文字檔才可進行轉換數列)</p>
+<p><span style="background-color: #ffcc99;">3 再將文字檔內容轉為數列</span></p>
+<p>將轉換後的文字檔間使用空白格或頓號進行區隔</p>
+<p><span style="background-color: #ffcc99;">4 使用random模組將數列亂數分組</span></p>
+<p>將轉換好的數列進行隨機排列分組</p>
+<p>(random<span>主要是</span><span>運用在將函數中的順序打亂)</span><br/><span></span></p>
+<div><span></span></div>
+<p><span style="background-color: #ffcc99;"></span></p><br />更新python << <a href='更新python.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
         
     <!-- footer -->
       <div class="container">
