--- a/content/更新python.html
+++ b/content/更新python.html
@@ -155,7 +155,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Assiganment1 << <a href='Assiganment1.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組<br /><h1>更新python</h1>
-<br />Assiganment1 << <a href='Assiganment1.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
+<p>更新python至3.8.2</p>
+<p><img alt="" height="450" src="./../images/python.png" width="800"/></p>
+<p>網站網址 : <a href="https://www.python.org/downloads/release/python-382/">https://www.python.org/downloads/release/python-382/</a></p>
+<p>透過這個網站下載 <a href="https://s40723114.github.io/get_page/python%20%E6%9B%B4%E6%96%B0%E8%87%B33.8.2/Windows%20x86-64%20executable%20installer">Windows x86-64 executable installe</a>r 的版本</p>
+<p>完成下載後開啟並選擇下方的<span>Customize installation</span></p>
+<p><img alt="" height="409" src="./../images/步驟.png" width="666"/></p>
+<p>並選擇安裝位置後將python安裝到隨身碟中的Y槽裡</p>
+<p>並使用start_mdecourse.bat 批次檔</p>
+<p>將<span>批次檔中的py373改為安裝python 3.8.2版本的資料夾</span></p>
+<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p><br />Assiganment1 << <a href='Assiganment1.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
         
     <!-- footer -->
       <div class="container">
