--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -130,15 +130,45 @@
 <p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
 <p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
 <p><span><img alt="" height="254" src="/images/12網頁1.png" width="500"/></span></p>
-<p><span>▲小組網頁</span></p>
-<h2>w13</h2>
-<h2>w14</h2>
-<h2>w15</h2>
-<h2>w16</h2>
-<h1>Assiganment1</h1>
+<p><span>▲小分組網頁</span></p><h2>w13</h2>
+<p><img alt="" height="237" src="/images/cdaw13.png" width="500"/></p>
+<p><span>▲抽中的通知信</span></p>
+<p><span>這週是第二週 已經較為熟悉操作方式</span></p>
+<p><span>一樣是需要將自己的進度放置於網頁並盡量不造成衝突</span></p>
+<p><span><img alt="" height="223" src="/images/cdaw13-1.png" width="500"/></span></p>
+<p><span>▲小組倉儲</span></p>
+<p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw13-1">https://github.com/mdecourse/cdaw13-1</a></p>
+<p>小分組網頁:<a href="http://mde.tw/cdaw13-1/content/index.html">http://mde.tw/cdaw13-1/content/index.html</a></p><h2>w14</h2>
+<p><img alt="" height="246" src="/images/cdaw14-1.png" width="500"/></p>
+<p><img alt="" height="240" src="/images/cdaw14-2.png" width="500"/></p>
+<p><span>▲抽中的通知信</span></p>
+<p><span>老師的抽取系統是不會排除已經抽中的人,所以有可能會一次被抽中兩組的情況,此時只需要選擇一組去做分組作業即可 : )</span></p>
+<p><span></span></p><h2>w15</h2>
+<p><img alt="" height="245" src="/images/cdaw15.png" width="500"/></p><h2>w16</h2>
+<p><img alt="" height="246" src="/images/cdaw16.png" width="500"/></p><h1>Assiganment1</h1>
 <h2>更新python</h2>
-<h2>亂數分組</h2>
-<h1>Assiganment2</h1>
+<p>更新python至3.8.2</p>
+<p><img alt="" height="450" src="/images/python.png" width="800"/></p>
+<p>網站網址 : <a href="https://www.python.org/downloads/release/python-382/">https://www.python.org/downloads/release/python-382/</a></p>
+<p>透過這個網站下載 <a href="https://s40723114.github.io/get_page/python%20%E6%9B%B4%E6%96%B0%E8%87%B33.8.2/Windows%20x86-64%20executable%20installer">Windows x86-64 executable installe</a>r 的版本</p>
+<p>完成下載後開啟並選擇下方的<span>Customize installation</span></p>
+<p><img alt="" height="409" src="/images/步驟.png" width="666"/></p>
+<p>並選擇安裝位置後將python安裝到隨身碟中的Y槽裡</p>
+<p>並使用start_mdecourse.bat 批次檔</p>
+<p>將<span>批次檔中的py373改為安裝python 3.8.2版本的資料夾</span></p>
+<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p><h2>亂數分組</h2>
+<p>亂數分組的流程大致可以分為4個步驟</p>
+<p><span style="background-color: #ffcc99;">1 抓出學員資料</span></p>
+<p>利用Python的requests模組來抓取網頁上的學生名單</p>
+<p><span style="background-color: #ffcc99;">2 將學生名單轉為文字檔</span></p>
+<p>將抓取到的學生名單進行轉換(文字檔才可進行轉換數列)</p>
+<p><span style="background-color: #ffcc99;">3 再將文字檔內容轉為數列</span></p>
+<p>將轉換後的文字檔間使用空白格或頓號進行區隔</p>
+<p><span style="background-color: #ffcc99;">4 使用random模組將數列亂數分組</span></p>
+<p>將轉換好的數列進行隨機排列分組</p>
+<p>(random<span>主要是</span><span>運用在將函數中的順序打亂)</span><br/><span></span></p>
+<div><span></span></div>
+<p><span style="background-color: #ffcc99;"></span></p><h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
 <p><span style="color: #ff6600;">40723153 吳佳穎</span></p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
@@ -310,7 +340,7 @@
 </li>
 <li>
 <p><code>孔徑(aperture):發射錐的張開角（弧度）；僅用於“紅外”。圓錐體的頂點位於發射器坐標系的原點（[0 0 0]），並且圓錐體的軸與發射器坐標系的z軸重合。 “紅外”發射器只能將數據發送到當前位於其發射錐內的接收器。 -1的孔徑（默認）被認為是無限大的，這意味著發射的信號是全向的。對於“無線電”和“串行”發射器，將忽略此字段。有關範圍和光圈的圖示，請參見此圖。</code></p>
-</li>
+<code><img alt="" height="361" src="/images/emitter_receiver.png" width="382"/></code></li>
 <li>
 <p><code>頻道(channel)</code>: 傳輸通道。這是“紅外線”發射器的標識號或“無線電”發射器的頻率。通常，接收器必須使用與發射器相同的通道來接收發射的數據。但是，特殊頻道-1允許在所有頻道上廣播消息。通道0（默認）保留用於與物理插件通信。對於機器人之間的通信，請使用正數通道號。</p>
 </li>
