--- a/content/w12.html
+++ b/content/w12.html
@@ -163,8 +163,7 @@ img.add_border {
 <p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
 <p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
 <p><span><img alt="" height="254" src="./../images/12網頁1.png" width="500"/></span></p>
-<p><span>▲小組網頁</span></p>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><span>▲小分組網頁</span></p><br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
