--- a/content/w14.html
+++ b/content/w14.html
@@ -155,7 +155,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w14</h1>
-<br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
+<p><img alt="" height="246" src="./../images/cdaw14-1.png" width="500"/></p>
+<p><img alt="" height="240" src="./../images/cdaw14-2.png" width="500"/></p>
+<p><span>▲抽中的通知信</span></p>
+<p><span>老師的抽取系統是不會排除已經抽中的人,所以有可能會一次被抽中兩組的情況,此時只需要選擇一組去做分組作業即可 : )</span></p>
+<p><span><img alt="" height="225" src="./../images/cdaw14-3.png" width="500"/></span></p>
+<p><span>▲小分組倉儲</span></p>
+<p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw14-3">https://github.com/mdecourse/cdaw14-3</a></p>
+<p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw14-3/content/index.html</a></p>
+<p><span></span></p><br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
