--- a/content/w16.html
+++ b/content/w16.html
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='Assiganment1.html'>Next</a> >> Assiganment1<br /><h1>w16</h1>
-<br />w15 << <a href='w15.html'>Previous</a> <a href='Assiganment1.html'>Next</a> >> Assiganment1</div>
+<p><img alt="" height="246" src="./../images/cdaw16.png" width="500"/></p><br />w15 << <a href='w15.html'>Previous</a> <a href='Assiganment1.html'>Next</a> >> Assiganment1</div>
         
     <!-- footer -->
       <div class="container">
