--- a/config/content.htm
+++ b/config/content.htm
@@ -119,8 +119,6 @@
 <h2>w9</h2>
 <p>紙本筆記</p>
 <p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p>
-<h2>w10</h2>
-<h2>w11</h2>
 <h2>w12</h2>
 <p>這週老師開始進行隨機分組協同編輯網頁 當被抽到時系統會寄信通知你</p>
 <p><img alt="" height="237" src="/images/cdaw12.png" width="500"/></p>
@@ -130,7 +128,8 @@
 <p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
 <p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
 <p><span><img alt="" height="254" src="/images/12網頁1.png" width="500"/></span></p>
-<p><span>▲小分組網頁</span></p><h2>w13</h2>
+<p><span>▲小分組網頁</span></p>
+<h2>w13</h2>
 <p><img alt="" height="237" src="/images/cdaw13.png" width="500"/></p>
 <p><span>▲抽中的通知信</span></p>
 <p><span>這週是第二週 已經較為熟悉操作方式</span></p>
@@ -138,7 +137,8 @@
 <p><span><img alt="" height="223" src="/images/cdaw13-1.png" width="500"/></span></p>
 <p><span>▲小組倉儲</span></p>
 <p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw13-1">https://github.com/mdecourse/cdaw13-1</a></p>
-<p>小分組網頁:<a href="http://mde.tw/cdaw13-1/content/index.html">http://mde.tw/cdaw13-1/content/index.html</a></p><h2>w14</h2>
+<p>小分組網頁:<a href="http://mde.tw/cdaw13-1/content/index.html">http://mde.tw/cdaw13-1/content/index.html</a></p>
+<h2>w14</h2>
 <p><img alt="" height="246" src="/images/cdaw14-1.png" width="500"/></p>
 <p><img alt="" height="240" src="/images/cdaw14-2.png" width="500"/></p>
 <p><span>▲抽中的通知信</span></p>
@@ -147,9 +147,14 @@
 <p><span>▲小分組倉儲</span></p>
 <p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw14-3">https://github.com/mdecourse/cdaw14-3</a></p>
 <p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw14-3/content/index.html</a></p>
-<p><span></span></p><h2>w15</h2>
-<p><img alt="" height="245" src="/images/cdaw15.png" width="500"/></p><h2>w16</h2>
-<p><img alt="" height="246" src="/images/cdaw16.png" width="500"/></p><h1>Assiganment1</h1>
+<p><span></span></p>
+<h2>w15</h2>
+<p><img alt="" height="245" src="/images/cdaw15.png" width="500"/></p>
+<p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw14-3">https://github.com/mdecourse/cdaw15-</a>1</p>
+<p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw15-1/content/index.html</a></p><h2>w16</h2>
+<p><img alt="" height="246" src="/images/cdaw16.png" width="500"/></p>
+<p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw14-3">https://github.com/mdecourse/cdaw16-</a>2</p>
+<p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw16-2/content/index.html</a></p><h1>Assiganment1</h1>
 <h2>更新python</h2>
 <p>更新python至3.8.2</p>
 <p><img alt="" height="450" src="/images/python.png" width="800"/></p>
@@ -160,7 +165,8 @@
 <p>並選擇安裝位置後將python安裝到隨身碟中的Y槽裡</p>
 <p>並使用start_mdecourse.bat 批次檔</p>
 <p>將<span>批次檔中的py373改為安裝python 3.8.2版本的資料夾</span></p>
-<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p><h2>亂數分組</h2>
+<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p>
+<h2>亂數分組</h2>
 <p>亂數分組的流程大致可以分為4個步驟</p>
 <p><span style="background-color: #ffcc99;">1 抓出學員資料</span></p>
 <p>利用Python的requests模組來抓取網頁上的學生名單</p>
@@ -172,7 +178,8 @@
 <p>將轉換好的數列進行隨機排列分組</p>
 <p>(random<span>主要是</span><span>運用在將函數中的順序打亂)</span><br/><span></span></p>
 <div><span></span></div>
-<p><span style="background-color: #ffcc99;"></span></p><h1>Assiganment2</h1>
+<p><span style="background-color: #ffcc99;"></span></p>
+<h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
 <p><span style="color: #ff6600;">40723153 吳佳穎</span></p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
@@ -272,7 +279,8 @@
 <li>
 <p><code>抗剪強度shearStrength</code>: 表示對接機構在破裂前可以承受的最大牛頓[N]剪切力。 這可以用來模擬對接機構的破裂。 shearStrength字段指定兩個連接器承受力的能力，該力會使它們在相反的方向（在xy平面中）彼此相對滑動。 請注意，如果兩個連接器均被鎖定，則有效抗剪強度對應於兩個連接器的shearStrength字段的總和。 默認值-1表示無限強的對接機制，無論施加多大的力都不會斷開（如果兩個連接器均被鎖定，則將其中一個連接器的shearStrength字段設置為-1就足夠了）。</p>
 </li>
-</ul><h3>Display 顯示</h3>
+</ul>
+<h3>Display 顯示</h3>
 <p>顯示</p>
 <p><img alt="" height="77" src="/images/顯示程式.png" width="500"/></p>
 <p><strong>Description介紹</strong></p>
@@ -326,7 +334,8 @@
 <li>Verdana</li>
 </ul>
 <p>除了這些字體之外，還可以在PROJECT_HOME / fonts目錄中添加其他TrueType字體文件。 默認字體是Lucida Console，8像素，帶有抗鋸齒功能。</p>
-<p></p><h3>Emitter 發射極</h3>
+<p></p>
+<h3>Emitter 發射極</h3>
 <p>發射極</p>
 <p><img alt="" height="167" src="/images/發射極程式.png" width="500"/></p>
 <p><strong>Description 描述</strong></p>
@@ -357,9 +366,18 @@
 <li>
 <p><code>緩衝區大小(bufferSize)</code>: 指定傳輸緩衝區的大小（以字節為單位）。 發射器中排隊的數據包中的字節總數不能超過此數目。 -1的bufferSize（默認值）被視為無限的緩衝區大小。</p>
 </li>
-</ul><h1>Assiganment3</h1>
+</ul>
+<h1>Assiganment3</h1>
 <h2>虛擬主機設定</h2>
-<h1>遇到問題</h1>
+<p><span>下載virtualbox和Ubuntu</span></p>
+<p><span><img alt="" height="224" src="/images/virtual.png" width="500"/></span></p>
+<p><span>打開後進入喜好設定Network裡面做設定</span></p>
+<p><span><img alt="" height="311" src="/images/virtual3.png" width="500"/></span></p>
+<p><span>將框選處全部打勾</span></p>
+<p><span><img alt="" height="307" src="/images/virtual4.png" width="500"/></span></p>
+<p><span>並設定好網路<span>所對應的port號</span></span></p>
+<p><span><span>之後進入虛擬主機將裡面的的wsgi.py裡的port號,設定成跟IPV4環境下一樣</span></span></p>
+<p><span><span>就完成網路設定了</span></span></p><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯</p>
 <p><img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
