--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -154,7 +154,8 @@
 <p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw15-1/content/index.html</a></p><h2>w16</h2>
 <p><img alt="" height="246" src="/images/cdaw16.png" width="500"/></p>
 <p>小分組倉儲:<a href="https://github.com/mdecourse/cdaw14-3">https://github.com/mdecourse/cdaw16-</a>2</p>
-<p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw16-2/content/index.html</a></p><h1>Assiganment1</h1>
+<p>小分組網頁:<a href="http://mde.tw/cdaw14-3/content/index.html">http://mde.tw/cdaw16-2/content/index.html</a></p>
+<h2>w17</h2><h1>Assiganment1</h1>
 <h2>更新python</h2>
 <p>更新python至3.8.2</p>
 <p><img alt="" height="450" src="/images/python.png" width="800"/></p>
@@ -369,7 +370,15 @@
 </ul>
 <h1>Assiganment3</h1>
 <h2>虛擬主機設定</h2>
-<h1>遇到問題</h1>
+<p><span>下載virtualbox和Ubuntu</span></p>
+<p><span><img alt="" height="224" src="/images/virtual.png" width="500"/></span></p>
+<p><span>打開後進入喜好設定Network裡面做設定</span></p>
+<p><span><img alt="" height="311" src="/images/virtual3.png" width="500"/></span></p>
+<p><span>將框選處全部打勾</span></p>
+<p><span><img alt="" height="307" src="/images/virtual4.png" width="500"/></span></p>
+<p><span>並設定好網路<span>所對應的port號</span></span></p>
+<p><span><span>之後進入虛擬主機將裡面的的wsgi.py裡的port號,設定成跟IPV4環境下一樣</span></span></p>
+<p><span><span>就完成網路設定了</span></span></p><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯</p>
 <p><img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
