--- a/reveal/index.html
+++ b/reveal/index.html
@@ -122,7 +122,7 @@ Created by [40723153](https://40723153.github.io/cd2020/content/index.html)
     <script type="text/template">
 ## Onshape繪圖
 繪圖影片
-<iframe src="https://youtu.be/Qg9Jmt8famM" width="640" height="492" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Qg9Jmt8famM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </script>
 </section>
